fixed catastrophic error (back to merch button was slightly askew on mobile)

--- a/src/pages/merchpages/css/merchstyle.css
+++ b/src/pages/merchpages/css/merchstyle.css
@@ -249,7 +249,7 @@ html {
     padding: .5rem;
     background-color: black;
     width: 100vw;
-    margin-left: 1rem;
+    padding-left: 1.5vw;
 }
 
 /* End Flexboxes*/
